@@ -33,6 +33,7 @@
 +	- Vertex snapping is now smarter, does a depth comparison to favor vertices closer to camera. Selecting a vertex very close with the cursor still allows selecting vertices far away from the camera. This makes it less likely to pick irrelevant vertices which caused problems in part files.
 +	- Added a selection hover effect to the renderer, making selecting objects a lot more convenient.
 +	- Selecting an invertnext'd object now also selects the invertnext.
++	- Made the coordinate rounding precision configurable.
 
 -	- The camera is now changed to the top one if switching to draw mode while using the free camera instead of disabling the draw mode.
 -	- The color selector now uses the color's edge color for the borders instead of black.
